- added lcd, gy85 test 	- gy85 wip 	- completed lcd test 	- updated docs 	- created common/utils for i2c, serial debug

--- a/test/GY85/Makefile
+++ b/test/GY85/Makefile
@@ -1,11 +1,11 @@
 # to program to arduino, type make flash
 CC=avr-gcc
-CFLAGS =
+CFLAGS = -Wl,-u,vfprintf -lprintf_flt -lm
 TOP = ../../
 
 # required
-SOURCES = $(wildcard *.c)
-INCLUDES = ./
+SOURCES = $(wildcard *.c) ../LCD-4x20/LCD.c
+INCLUDES = ./ ../LCD-4x20/
 
 # extra utils such as soft serial, i2c, serial debug
 SOURCES	  += $(wildcard $(TOP)/common/utils/*.c)
