- added code cleanup 	- added lcd contrast changer code 	- improved lcd test 	- add blank code for bypass test 	- gy85 wip

--- a/test/blank/Makefile
+++ b/test/blank/Makefile
@@ -1,15 +1,11 @@
 # to program to arduino, type make flash
 CC=avr-gcc
-CFLAGS = -O0
+CFLAGS =
 TOP = ../../
 
 # required
 SOURCES = $(wildcard *.c)
-INCLUDES = ./ 
-
-# extra utils such as soft serial, i2c
-SOURCES	  += $(wildcard $(TOP)/common/utils/*.c)
-INCLUDES  += $(TOP)/common/utils/ 
+INCLUDES = ./
 
 # specify your preferred .mk file
 include ../../common/without-os.mk
