- add serialdebug echo option 	- add gps module + parse test code 	- WIP GGA parser

--- a/test/GPS-breakout-board/Makefile
+++ b/test/GPS-breakout-board/Makefile
@@ -11,6 +11,10 @@ INCLUDES = ./
 TEST_HEADERS = $(wildcard test/*.h) 
 TEST_SOURCES = NMEAParser.c
 
+# extra utils such as soft serial, i2c, serial debug
+SOURCES	  += $(wildcard $(TOP)/common/utils/*.c)
+INCLUDES  += $(TOP)/common/utils/ 
+
 # specify your preferred .mk file
 include $(TOP)/common/without-os.mk
 include $(TOP)/common/unittest.mk
