- changed NMEA distance output to meters 	- wip i2c console on arduino side 	- completed i2c console api unit test 	- added support debug flag in make & test

--- a/test/i2c-console/Makefile
+++ b/test/i2c-console/Makefile
@@ -1,17 +1,19 @@
 # to program to arduino, type make flash
 CC=avr-gcc
-CFLAGS = 
-FLOAT_SUPPORT = YES # support printf, sscanf floats
+CFLAGS = -Wextra
+DEBUG = yes
+FLOAT_SUPPORT = no # support printf, sscanf floats
 UTILS_SUPPORT = YES # extra utils such as soft serial, i2c, serial debug
 
 # required
 TOP = ../../
-SOURCES = $(wildcard *.c) ../LCD-4x20/LCD.c
+SOURCES = $(wildcard *.c)
 INCLUDES = ./
 
 # unit test files
 # remember to put cxx test headers in test/*Test.h
-TEST_SOURCES = NMEAParser.c
+TEST_SOURCES = I2CConsole.c
+TEST_DEBUG = no
 
 # specify your preferred .mk file
 include $(TOP)/common/without-os.mk
