- moved gps breakout board to official project 	- added its readme

--- a/c-project/without-os/GPS-breakout-board/Makefile
+++ b/c-project/without-os/GPS-breakout-board/Makefile
@@ -5,9 +5,9 @@ FLOAT_SUPPORT = YES # support printf, sscanf floats
 UTILS_SUPPORT = YES # extra utils such as soft serial, i2c, serial debug
 
 # required
-TOP = ../../
-SOURCES = $(wildcard *.c) ../LCD-4x20/LCD.c
-INCLUDES = ./
+TOP = ../../../
+SOURCES = $(wildcard *.c) $(TOP)/test/LCD-4x20/LCD.c
+INCLUDES = ./  $(TOP)/test/LCD-4x20/
 
 # unit test files
 # remember to put cxx test headers in test/*Test.h
