- minor mkfile fix, added hex name changing support

--- a/c-project/without-os/GPS-breakout-board/Makefile
+++ b/c-project/without-os/GPS-breakout-board/Makefile
@@ -3,6 +3,7 @@ CC=avr-gcc
 CFLAGS = 
 FLOAT_SUPPORT = YES # support printf, sscanf floats
 UTILS_SUPPORT = YES # extra utils such as soft serial, i2c, serial debug
+HEX_NAME = GPS-breakout-board.hex
 
 # required
 TOP = ../../../
