--- a/c-project/without-os/i2c-console/Makefile
+++ b/c-project/without-os/i2c-console/Makefile
@@ -4,6 +4,7 @@ CFLAGS = -Wextra
 DEBUG = no
 FLOAT_SUPPORT = no # support printf, sscanf floats
 UTILS_SUPPORT = YES # extra utils such as soft serial, i2c, serial debug
+HEX_NAME = i2c-console.hex
 
 # required
 TOP = ../../../
