- added skeleton.mk : all projects only need to include this file - done GY85 get raw data - WIP : GY85 get real data - minor doc name change - mv all other .mk to common/makefiles - run make help from skeleton.mk to see all configurable vars - updated master readme

--- a/c-project/with-os/Makefile
+++ b/c-project/with-os/Makefile
@@ -1,7 +1,10 @@
+# type make program to flash into device
+WITH_OS = true
+
+# required
 SOURCES = $(wildcard *.c)
 INCLUDES = ./
 
 
-# specify os path
-CHIBIOS = ../../os/ChibiOS/
-include ../../common/with-chibios.mk
+# always include skeleton.mk
+include ../../common/skeleton.mk
