--- a/c-project/without-os/blank/Makefile
+++ b/c-project/without-os/blank/Makefile
@@ -1,11 +1,10 @@
 # to program to arduino, type make flash
-CC=avr-gcc
 CFLAGS = 
-BINARY_NAME = c-binary
+PROJECT_NAME = c-blank
 
 # required
 SOURCES = $(wildcard *.c)
 INCLUDES = ./
 
-# specify your preferred .mk file
-include ../../common/without-os.mk
+# always include skeleton.mk
+include ../../../common/skeleton.mk
