--- a/c-project/without-os/i2c-console/Makefile
+++ b/c-project/without-os/i2c-console/Makefile
@@ -1,23 +1,21 @@
 # to program to arduino, type make flash
-CC=avr-gcc
 CFLAGS = -Wextra
 DEBUG = no
 FLOAT_SUPPORT = no # support printf, sscanf floats
 UTILS_SUPPORT = YES # extra utils such as soft serial, i2c, serial debug
-HEX_NAME = i2c-console.hex
+PROJECT_NAME = i2c-console.hex
+TOP = ../../../
 
 # required
-TOP = ../../../
 SOURCES = $(wildcard *.c)
 INCLUDES = ./
 
 # unit test files
 # remember to put cxx test headers in test/*Test.h
+UNITTEST_SUPPORT = true
 TEST_SOURCES = I2CConsole.c I2CConsoleStack.c
 TEST_DEBUG = no
 TEST_CFLAGS = -std=gnu++0x
 
-# specify your preferred .mk file
-include $(TOP)/common/without-os.mk
-include $(TOP)/common/unittest.mk
-
+# always include skeleton.mk
+include $(TOP)/common/skeleton.mk
