--- a/c-project/without-os/serial-calculator/Makefile
+++ b/c-project/without-os/serial-calculator/Makefile
@@ -1,23 +1,22 @@
 # to program to arduino, type make flash
-CC=avr-gcc
 CFLAGS = -Wextra
 DEBUG = yes
 FLOAT_SUPPORT = no # support printf, sscanf floats
 UTILS_SUPPORT = yes # extra utils such as soft serial, i2c, serial debug
-HEX_NAME = simple-calculator.hex
+PROJECT_NAME = simple-calculator
+TOP = ../../../
 
 # required
-TOP = ../../../
-SOURCES = $(wildcard *.c)
-INCLUDES = ./
+#SOURCES = $(wildcard *.c)
+#INCLUDES = ./
 
 # unit test files
 # remember to put cxx test headers in test/*Test.h
+UNITTEST_SUPPORT = yes
 TEST_SOURCES = InfixConverter.c PostfixCalculator.c $(UTILS_DIR)/AVRString.c
 TEST_DEBUG = no
 TEST_CFLAGS = -std=gnu++0x
 
-# specify your preferred .mk file
-include $(TOP)/common/without-os.mk
-include $(TOP)/common/unittest.mk
+# always include skeleton.mk
+include $(TOP)/common/skeleton.mk
 
