--- a/cpp-project/without-os/Makefile
+++ b/cpp-project/without-os/Makefile
@@ -1,11 +1,10 @@
 # to program to arduino, type make flash
-CC=avr-g++
-CFLAGS = -Wno-write-strings
-BINARY_NAME = cpp-binary
+CPP_PROJECT = yes
+PROJECT_NAME = cpp-sample
 
 # required
 SOURCES = $(wildcard *.cpp)
 INCLUDES = ./
 
-# specify your preferred .mk file
-include ../../common/without-os.mk
+# always include skeleton.mk
+include ../../common/skeleton.mk
