--- a/test/sound-detector/Makefile
+++ b/test/sound-detector/Makefile
@@ -1,10 +1,5 @@
 # to program to arduino, type make flash
-CC=avr-gcc
-CFLAGS = 
+UTILS_SUPPORT = yes
 
-# required
-SOURCES = $(wildcard *.c) ../serial-port/SerialDebug.c
-INCLUDES = ./ ../serial-port/
-
-# specify your preferred .mk file
-include ../../common/without-os.mk
+# always include skeleton.mk
+include ../../common/skeleton.mk
