--- a/test/timer/Makefile
+++ b/test/timer/Makefile
@@ -1,13 +1,6 @@
 # to program to arduino, type make flash
-CC=avr-gcc
-CFLAGS =
 DEBUG = yes
 UTILS_SUPPORT = yes
 
-# required
-TOP = ../../
-SOURCES = $(wildcard *.c)
-INCLUDES = ./
-
-# specify your preferred .mk file
-include ../../common/without-os.mk
+# always include skeleton.mk
+include ../../common/skeleton.mk
