--- a/test/serial-port/Makefile
+++ b/test/serial-port/Makefile
@@ -1,16 +1,5 @@
 # to program to arduino, type make flash
-CC=avr-gcc
-CFLAGS =
-TOP = ../../
 UTILS_SUPPORT = yes
 
-# required
-SOURCES = $(wildcard *.c)
-INCLUDES = ./
-
-# unit test files
-TEST_SOURCES = $(TOP)/common/utils/AVRString.c
-
-# specify your preferred .mk file
-include $(TOP)/common/without-os.mk
-include $(TOP)/common/unittest.mk
+# always include skeleton.mk
+include ../../common/skeleton.mk
