- WIP: soft serial, done TX, need to refine RX - todo: create ide compatible mkfile, move to c++ phase

--- a/c-project/without-os/GPS-breakout-board/Makefile
+++ b/c-project/without-os/GPS-breakout-board/Makefile
@@ -2,7 +2,7 @@
 CFLAGS = 
 FLOAT_SUPPORT = YES # support printf, sscanf floats
 UTILS_SUPPORT = YES # extra utils such as soft serial, i2c, serial debug
-PROJECT_NAME = GPS-breakout-board.hex
+PROJECT_NAME = GPS-breakout-board
 TOP = ../../../
 
 # required
