--- a/cpp-project/with-ide/blink/Makefile
+++ b/cpp-project/with-ide/blink/Makefile
@@ -1,10 +1,7 @@
 # to program to arduino, type make flash
 IDE_SUPPORT = yes
 PROJECT_NAME = ide-sample
-
-# required
-SOURCES = $(wildcard *.cpp)
-INCLUDES = ./
+CFLAGS = -fdata-sections -ffunction-sections -Wl,--gc-sections
 
 # always include skeleton.mk
-include ../../common/skeleton.mk
+include ../../../common/skeleton.mk
