- added i2c scanner in test/ - added scan command in i2c-console - added chibios to submodules - OPTIMIZE is added to skeleton.mk - ide.mk completed

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "submodules/Arduino-Makefile"]
 	path = submodules/Arduino-Makefile
 	url = https://github.com/sudar/Arduino-Makefile
+[submodule "submodules/ChibiOS"]
+	path = submodules/ChibiOS
+	url = https://github.com/ChibiOS/ChibiOS
