--- a/cpp-project/with-ide/blink/Makefile
+++ b/cpp-project/with-ide/blink/Makefile
@@ -2,6 +2,7 @@
 IDE_SUPPORT = yes
 PROJECT_NAME = ide-sample
 CFLAGS = -fdata-sections -ffunction-sections -Wl,--gc-sections
+UTILS_SUPPORT = yes
 
 # always include skeleton.mk
 include ../../../common/skeleton.mk
