--- a/cpp-project/with-ide/i2c-scanner/Makefile
+++ b/cpp-project/with-ide/i2c-scanner/Makefile
@@ -1,2 +1,8 @@
-BOARD_TAG    = uno
-include /home/dat/Downloads/Arduino-Makefile/Arduino.mk
+# to program to arduino, type make flash
+IDE_SUPPORT = yes
+PROJECT_NAME = i2c-scanner
+CFLAGS = 
+UTILS_SUPPORT = 
+
+# always include skeleton.mk
+include ../../../common/skeleton.mk
