--- a/test/i2c-ping/Makefile
+++ b/test/i2c-ping/Makefile
@@ -1,7 +1,8 @@
 # to program to arduino, type make flash
-CPP_PROJECT = yes
-PROJECT_NAME = cpp-sample
-CFLAGS = 
+UTILS_SUPPORT = yes
+DEBUG = no
+OPTIMIZE = yes
 
 # always include skeleton.mk
 include ../../common/skeleton.mk
+
