- added compile all warning & report on maintainer script - added Millis using timer2 - fixed timer test - add report style, error control in proj manager

--- a/c-project/without-os/i2c-console/Makefile
+++ b/c-project/without-os/i2c-console/Makefile
@@ -4,7 +4,7 @@ DEBUG = no
 FLOAT_SUPPORT = no # support printf, sscanf floats
 UTILS_SUPPORT = YES # extra utils such as soft serial, i2c, serial debug
 PROJECT_NAME = i2c-console
-OPTIMIZE = no
+OPTIMIZE = yes
 TOP = ../../../
 
 # required
