- major change in gtest structure - moved to gtest for serial calc project - fixed serial calc project segfault & stack smashing in unit test

--- a/c-project/without-os/serial-calculator/Makefile
+++ b/c-project/without-os/serial-calculator/Makefile
@@ -12,10 +12,12 @@ TOP = ../../../
 
 # unit test files
 # remember to put cxx test headers in test/*Test.h
-UNITTEST_SUPPORT = yes
+# or gtest test .cpp files in test/*gtest.cpp
+UNITTEST_SUPPORT = no
+GTEST_SUPPORT = yes
 TEST_SOURCES = InfixConverter.c PostfixCalculator.c $(UTILS_DIR)/AVRString.c
 TEST_DEBUG = no
-TEST_CFLAGS = -std=gnu++0x
+TEST_CFLAGS = -fno-stack-protector
 
 # always include skeleton.mk
 include $(TOP)/common/skeleton.mk
