- done v2.1.0 - integrated project_manager.sh with exit code for travis - default full report in make compile

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,6 +4,7 @@
 [submodule "submodules/ChibiOS"]
 	path = submodules/ChibiOS
 	url = https://github.com/ChibiOS/ChibiOS
+    ignore = dirty
 [submodule "submodules/googletest"]
 	path = submodules/googletest
 	url = https://github.com/google/googletest
